--- a/Numpy/Numpy Quiz-문제.ipynb
+++ b/Numpy/Numpy Quiz-문제.ipynb
@@ -5,13 +5,23 @@
    "execution_count": 1,
    "id": "7d34f957",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is sample.\n"
+     ]
+    }
+   ],
    "source": [
     "# 필요한 라이브러리를 불러옵니다.\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "print('this is sample.')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e35027db",
    "metadata": {},
@@ -40,6 +50,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7fe92102",
    "metadata": {},
@@ -68,6 +79,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a04b347c",
    "metadata": {},
@@ -104,6 +116,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a8fb1466",
    "metadata": {},
@@ -132,6 +145,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fb98a12e",
    "metadata": {},
@@ -167,6 +181,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "87f765ae",
    "metadata": {},
@@ -224,6 +239,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8765875e",
    "metadata": {},
@@ -262,6 +278,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b1a5847c",
    "metadata": {},
@@ -296,6 +313,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d5bd1501",
    "metadata": {},
@@ -324,6 +342,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "143e78e1",
    "metadata": {},
@@ -354,6 +373,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "26819557",
    "metadata": {},
@@ -418,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
