complete Numpy Quiz

--- a/Numpy/Numpy Quiz-문제.ipynb
+++ b/Numpy/Numpy Quiz-문제.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "7d34f957",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "186a443c",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,8 @@
     }
    ],
    "source": [
-    "z = np.\n",
+    "# array 생성 : np.arange()\n",
+    "z = np.arange(10,50)\n",
     "print(z)"
    ]
   },
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "f78638fa",
    "metadata": {},
    "outputs": [
@@ -74,7 +75,14 @@
     }
    ],
    "source": [
-    "z = \n",
+    "'''\n",
+    "- np.flipud() : array 위아래 반전\n",
+    "- np.filplr() : array 좌우 반전\n",
+    "- np.flip() : 상하좌우 전체 반전\n",
+    "'''\n",
+    "\n",
+    "z = np.flip(z)\n",
+    "\n",
     "print(z)"
    ]
   },
@@ -89,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "fcf79ba9",
    "metadata": {},
    "outputs": [
@@ -111,8 +119,8 @@
     }
    ],
    "source": [
-    "z = \n",
-    "print(z)"
+    "# z = \n",
+    "print(z.reshape(10,4))"
    ]
   },
   {
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "0b0944c7",
    "metadata": {},
    "outputs": [
@@ -134,13 +142,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([0, 1, 2, 4, 6]),)\n"
+      "(array([0, 1, 2, 4, 6], dtype=int64),)\n"
      ]
     }
    ],
    "source": [
     "x = np.array([5,6,8,0,1,0,7])\n",
-    "nz_idx =\n",
+    "nz_idx = np.where(x != 0)\n",
     "print(nz_idx)"
    ]
   },
@@ -150,13 +158,12 @@
    "id": "fb98a12e",
    "metadata": {},
    "source": [
-    "### nan 값 이해하기\n",
-    "\n"
+    "### nan 값 이해하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "7d12b519",
    "metadata": {},
    "outputs": [
@@ -191,51 +198,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c5dade12",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-      "\n",
-      "[[0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
-      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]\n",
-      " [0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
-      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]\n",
-      " [0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
-      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]\n",
-      " [0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
-      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]\n",
-      " [0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
-      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]\n",
-      " [0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
-      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "x = np.zeros((12, 12))\n",
-    "print(x, end='\\n\\n')\n",
-    "###############\n",
-    "# 슬라이싱을 사용하세요\n",
-    "\n",
-    "\n",
-    "###############\n",
-    "print(x)"
+    "x[1::2, ::2] = 1 \n",
+    "x[::2, 1::2] = 1\n",
+    "x"
    ]
   },
   {
@@ -249,32 +241,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "fe6834dd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = \n",
-    "print(x)"
+    "'''\n",
+    "- np.tile(array, 조건) : 배열 복사 \n",
+    "    * 조건1 : reps  ; array 복사 및 바로 옆에 reps 만큼 붙히기\n",
+    "    * 조건2 : (ndim, reps) ; 차원의 개수, reps 만큼 복사 \n",
+    "'''\n",
+    "x = np.array([0,1])\n",
+    "\n",
+    "a = np.tile(x,(1,6))\n",
+    "b = np.tile(np.flipud(x),(1,6))\n",
+    "c = np.vstack([a,b])\n",
+    "\n",
+    "np.tile(c,(6,1))\n",
+    "# for \n"
    ]
   },
   {
@@ -288,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "id": "bd215833",
    "metadata": {},
    "outputs": [
@@ -306,7 +312,7 @@
     "print(x)\n",
     "##################\n",
     "# 필터링을 사용하세요.\n",
-    "\n",
+    "x[(x>=5)&(x<=10)] = 0\n",
     "\n",
     "##################\n",
     "print(x)"
@@ -323,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "id": "88e38f0e",
    "metadata": {},
    "outputs": [
@@ -331,13 +337,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  0.          11.11111111  22.22222222  33.33333333  44.44444444\n",
-      "  55.55555556  66.66666667  77.77777778  88.88888889 100.        ]\n"
+      "[27.81053807  0.12197429 52.72189375 94.18605552 68.05753792 46.00807867\n",
+      " 14.06319433 45.42062905 60.72826889 13.2584485 ]\n"
      ]
     }
    ],
    "source": [
-    "x =\n",
+    "''' \n",
+    "- np.random.uniform(최소,최대, 데이터 수) : 균등 분포 정보 생성\n",
+    "- np.random.normal(최소,최대, 데이터 수) : 정규 분포 정보 생성\n",
+    "\n",
+    "'''\n",
+    "x = np.random.uniform(0,100,10)\n",
     "print(x)"
    ]
   },
@@ -352,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "id": "56449e50",
    "metadata": {},
    "outputs": [
@@ -360,16 +371,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "A와 B는 동일한 array입니다.\n"
      ]
     }
    ],
    "source": [
+    "'''\n",
+    "- np.allclose(arr1, arr2) : 두 배열이 허용 오차 범위 내에서 요소별로 동일한지 여부를 결정\n",
+    "\n",
+    "'''\n",
+    "\n",
     "A = np.array([1e10,1e-8])\n",
     "B = np.array([1.00001e10,1e-9])\n",
     "\n",
-    "equal = \n",
-    "print(equal)"
+    "equal = np.allclose(A,B)\n",
+    "print('A와 B는 동일한 array입니다.' if equal is True else '동일하지 않습니다.')"
    ]
   },
   {
@@ -383,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "id": "4136e249",
    "metadata": {},
    "outputs": [
@@ -391,35 +407,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.03420121 0.59679247]\n",
-      " [1.07051166 0.92941267]\n",
-      " [0.91208375 1.43904283]\n",
-      " [0.60518691 1.3606472 ]\n",
-      " [1.13624454 0.66692838]\n",
-      " [1.04951832 0.95618812]\n",
-      " [0.88019332 0.2965659 ]\n",
-      " [0.93300926 0.05579026]\n",
-      " [1.05163631 0.61874614]\n",
-      " [0.42509465 0.15161589]]\n"
+      "[[1.14288852e+00 1.05789342e+00]\n",
+      " [7.68341900e-01 1.86663000e-01]\n",
+      " [2.92695004e-01 8.76805089e-01]\n",
+      " [8.04081478e-01 1.64570492e-04]\n",
+      " [1.00914503e+00 8.08750259e-01]\n",
+      " [6.52687558e-01 1.50668357e+00]\n",
+      " [9.62272734e-01 4.36014632e-01]\n",
+      " [8.54009998e-01 7.61592200e-02]\n",
+      " [4.21583340e-01 4.45818360e-01]\n",
+      " [9.72263100e-01 1.16060723e+00]]\n"
      ]
     }
    ],
    "source": [
     "coord = np.random.random((10,2))\n",
     "x, y = coord[:,0], coord[:,1]\n",
-    "r = \n",
-    "theta = \n",
+    "r = np.sqrt(np.power(x, 2)+np.power(y, 2))\n",
+    "theta = np.arctan(y/x)\n",
     "ploar_coord = np.concatenate([r[:,np.newaxis], theta[:,np.newaxis]],axis=1)\n",
     "print(ploar_coord)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40708824",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
