--- a/Pandas/Pandas Quiz-문제.ipynb
+++ b/Pandas/Pandas Quiz-문제.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0874a710",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is sample.\n"
+     ]
+    }
+   ],
    "source": [
     "# pandas 라이브러리를 불러옵니다.\n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "print('this is sample.')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30e3d497",
    "metadata": {},
@@ -407,6 +417,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f0039dd6",
    "metadata": {},
@@ -632,6 +643,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e2d55ea1",
    "metadata": {},
@@ -661,6 +673,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2080c07e",
    "metadata": {},
@@ -690,6 +703,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "127fef94",
    "metadata": {},
@@ -716,6 +730,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fe8ed593",
    "metadata": {},
@@ -760,6 +775,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b05c1c5e",
    "metadata": {},
@@ -1079,6 +1095,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1ab11b98",
    "metadata": {},
@@ -1136,6 +1153,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d83fc102",
    "metadata": {},
@@ -1203,6 +1221,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "35e0c3e1",
    "metadata": {},
@@ -1519,7 +1538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
